# ekman

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs  logic.rs  models.rs
server/: .gitignore  Cargo.toml  Containerfile  env.example
server/src/: auth.rs  db.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs
tui/: Cargo.toml
tui/src/: api.rs  binds.conf  command.rs  io.rs  keybind.rs  main.rs  state.rs  ui.rs
web/: app.js  index.html  style.css
