[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
axum = "0.8.7"
tower-http = { version = "0.6.6", features = ["fs", "trace", "cors", "compression-gzip"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"
turso = "0.3.2"
thiserror = "1.0.69"
chrono = { version = "0.4.38", features = ["serde"] }
futures-util = "0.3.31"
