[package]
name = "ekman_server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ekman-server"
path = "src/main.rs"

[dependencies]
ekman_core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
turso = "0.3"
chrono = { version = "0.4", features = ["serde"] }
argon2 = { version = "0.5", features = ["std"] }
totp-rs = { version = "5.7", features = ["otpauth"] }
base32 = "0.5"
