[package]
name = "tui"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.28"
ratatui = "0.29"
color-eyre = "0.6"
ekman_core = { path = "../core", package = "core" }
qrcode = { version = "0.14", default-features = false }
tui-qrcode = "0.1.3"
rand = "0.8"
base32 = "0.5"
urlencoding = "2.1"
