[package]
name = "ekman_tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ekman"
path = "src/main.rs"

[dependencies]
ekman_core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.28"
ratatui = "0.29"
color-eyre = "0.6"
qrcode = { version = "0.14", default-features = false }
tui-qrcode = "0.1"
rand = "0.8"
base32 = "0.5"
